<resources>
    <string name="app_name">JeunesseMiami</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="sincronizar_contactos">Sincronizando contactos...</string>
    <string name="error_servicios">Error. Intente más tarde.</string>
    <string name="cargando">Cargando...</string>
    <string name="cerrar_sesion">¿Desea cerrar sesión?</string>
    <string name="gracias_por_su_visita">Gracias por su visita</string>
    <string name="seleccionar_todos">Seleccionar todos</string>
    <string name="deseleccionar_todos">Deseleccionar todos</string>
    <string name="title_activity_nevigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="enviar_sms">Enviar SMS</string>
    <string name="enviar">Enviar</string>
    <string name="action_settings">Settings</string>
    <string name="siguiente">Siguiente</string>
    <string name="mensaje">Mensaje</string>
    <string name="preview_msg">Preview</string>
    <string name="imagen">Imagen</string>
    <string name="link_video">Link video</string>
    <string name="pick_image_intent_text">Seleccione una foto</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
