<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appcontactos.javierdiaz.jeunessemiami.MainActivity">

    <ListView
        android:id="@+id/listview_contactos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="50dp"
        ></ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_sincronizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:text="@string/sincronizar"

            />
        <Button
            android:id="@+id/btn_selecctodos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:text="@string/seleccionar_todos"

            />
        <Button
            android:id="@+id/btn_deselecctodos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:text="@string/deseleccionar_todos"

            />


    </LinearLayout>


</RelativeLayout>
