<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appcontactos.javierdiaz.jeunessemiami.fragments.PlantillasFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/relative_plantillas_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/listview_plantillas"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="15dp"
                android:minHeight="10dp">

            </ListView>

            <RelativeLayout
                android:id="@+id/relative_preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/listview_plantillas"
                android:layout_margin="15dp"
                android:background="@drawable/text_view_confirmacion_style"
                android:minHeight="200dp">

                <LinearLayout
                    android:id="@+id/linear_preview_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtview_preview_msg_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mensaje"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/txtview_preview_msg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_preview_img"
                    android:layout_below="@+id/linear_preview_msg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtview_preview_img_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/imagen"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                    <ImageView
                        android:id="@+id/imgView_preview_img"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@mipmap/usuario"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_preview_vid"
                    android:layout_below="@+id/linear_preview_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtview_preview_vid_tag"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/link_video"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/txtview_preview_vid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:textSize="14sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_preview_msg"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/preview_msg"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_send_msg"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/enviar" />
</RelativeLayout>
